Fixing language format and spacing

--- a/packages/keycloak-extensions/sequent-theme/src/main/resources/theme/sequent.admin-portal/login/resources/css/custom.css
+++ b/packages/keycloak-extensions/sequent-theme/src/main/resources/theme/sequent.admin-portal/login/resources/css/custom.css
@@ -200,6 +200,8 @@ button#kc-current-locale-link img {
 #kc-locale-dropdown a {
     text-align: left;
     text-decoration: none;
+    text-transform: none;
+    letter-spacing: normal;
 }
 
 #kc-locale ul {
